// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PingTest / Ping Changes nothing if there's no prop passed in 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <p>
    This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
  </p>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
</div>
`;

exports[`PingTest / Ping Fetches and updates state if button is clicked 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <p>
    This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
  </p>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
  <p>
    Pinged with user 
    Yoda
  </p>
  <p>
    The whole opperatiorn took 
    Time string
  </p>
</div>
`;

exports[`PingTest / Ping Matches previous setup 1`] = `
<div>
  <h1>
    Connection testing field
  </h1>
  <p>
    This will ping a random user thowards the server. However. it won't sign in the user since the user isn't verefied
  </p>
  <button
    alternative={true}
    onClick={[Function]}
    outlined={true}
  >
    Click to ping
  </button>
</div>
`;
